manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: webapi
    spec:
      serviceAccountName: webapi
      containers:
      - name: webapi
        image: kostapetan.azurecr.io/bgdemo/webapi:77d1d5576812b82a4f6e999f2844fb66da2023b4
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 1000m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
