manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  labels:
    app: webapi
    service: webapi
spec:
  ports:
  - name: http
    port: 5000
  selector:
    app: webapi
